v<0.3.6>, <02/03/2024> -- Revised benchmark notebook
v<0.3.7>, <02/08/2024> -- Python 3.12 support
v<0.3.7>, <08/07/2024> -- Added PDF to Readthedocs
v<0.3.7>, <08/09/2024> -- Removed Geomstats dependency from KARCH
v<0.3.7>, <08/18/2024> -- Fixed Zscore implementation
v<0.3.7>, <08/18/2024> -- Added faster KDE and CDF generation using upsampling
v<0.3.7>, <08/18/2024> -- Added fast KDE and CDF test case
v<0.3.7>, <08/18/2024> -- Fixed muli-peak error in FWFM
v<0.3.7>, <08/18/2024> -- Updated time complexity benchmarks
v<0.3.8>, <11/21/2024> -- Added factor arg to MAD and ZSCORE, contribution by @MalikAly
v<0.3.8>, <12/15/2024> -- Removed matplotlib as core dependency
v<1.0.0>, <12/19/2024> -- Fixed low contamination issue in RANK
v<1.0.0>, <01/27/2025> -- Added numpy random seed to all thresholders
v<1.0.0>, <01/27/2025> -- Added `fit` and `predict` methods to all thresholders
v<1.0.0>, <01/27/2025> -- Aligned MTT alpha arg with standard value
v<1.0.0>, <01/27/2025> -- Aligned all thresholders to be sklearn compatible
v<1.0.0>, <01/27/2025> -- Added new example notebooks
v<1.0.0>, <01/27/2025> -- Updated all thresholder tests
v<1.0.0>, <01/27/2025> -- Updated all thresholder examples
v<1.0.0>, <01/27/2025> -- Updated docs with shift to V1
v<1.0.0>, <01/27/2025> -- Updated docs with datatables
v<1.0.1>, <06/14/2025> -- Updated max thresholder limit
v<1.0.1>, <08/10/2025> -- Fixed test scores min max range
v<1.0.1>, <08/10/2025> -- Updated tests with random state and better test scores coverage
v<1.0.2>, <10/10/2025> -- Removed Python 3.9 from testing
v<1.0.2>, <10/10/2025> -- Python 3.13 support
v<1.0.2>, <11/30/2025> -- Fixed COMB max_contam empty list issue
v<1.0.3>, <01/19/2026> -- Updated docs with thumbnails
v<1.0.3>, <01/27/2026> -- Added fallback verbosity action arg (when threshold not found)
v<1.0.3>, <01/27/2026> -- Fixed refitting thresholders during predict in COMB
v<1.0.3>, <01/27/2026> -- Added DUMMY thresholder for benchmarking, thanks @NicohMP