@@ -106,3 +106,4 @@ v<1.0.3>, <01/19/2026> -- Updated docs with thumbnails
 v<1.0.3>, <01/27/2026> -- Added fallback verbosity action arg (when threshold not found)
 v<1.0.3>, <01/27/2026> -- Fixed refitting thresholders during predict in COMB
 v<1.0.3>, <01/27/2026> -- Added DUMMY thresholder for benchmarking, thanks @NicohMP
+v<1.0.4>, <02/22/2026> -- Aligning CHAU to classical Chauvenet criterion
